--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -2,11 +2,10 @@ name: Itty Bitty Gaming News Bot
 
 on:
   schedule:
-    # GitHub Actions cron is UTC.
-    # 8:00am PT (UTC-8) = 16:00 UTC
-    - cron: "0 16 * * *"
-    # 6:00pm PT (UTC-8) = 02:00 UTC (next day)
-    - cron: "0 2 * * *"
+    # GitHub cron uses UTC (PT assumed UTC-8 for MVP)
+    - cron: "0 16 * * *"  # 8:00am PT
+    - cron: "0 21 * * *"  # 1:00pm PT
+    - cron: "0 2 * * *"   # 6:00pm PT
   workflow_dispatch: {}
 
 jobs:
@@ -29,7 +28,7 @@ jobs:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
           MAX_POSTS_PER_RUN: "12"
           TITLE_FUZZY_THRESHOLD: "92"
-          USER_AGENT: "IttyBittyGamingNewsBot/1.0"
+          USER_AGENT: "IttyBittyGamingNewsBot/1.3"
         run: python main.py
 
       - name: Commit updated state.json
