--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -1,11 +1,6 @@
-name: Itty Bitty Gaming News Bot
+name: Itty Bitty Gaming News Bot (TEST DIGEST)
 
 on:
-  schedule:
-    # GitHub cron uses UTC (PT assumed UTC-8 for MVP)
-    - cron: "0 16 * * *"  # 8:00am PT
-    - cron: "0 21 * * *"  # 1:00pm PT
-    - cron: "0 2 * * *"   # 6:00pm PT
   workflow_dispatch: {}
 
 jobs:
@@ -23,18 +18,12 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Run bot
+      - name: Run bot (digest test – does NOT update state)
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          MAX_POSTS_PER_RUN: "12"
+          MODE: "DIGEST"
+          SKIP_STATE_UPDATE: "1"
+          MAX_POSTS_PER_RUN: "5"
           TITLE_FUZZY_THRESHOLD: "92"
-          USER_AGENT: "IttyBittyGamingNewsBot/1.3"
+          USER_AGENT: "IttyBittyGamingNewsBot/TEST"
         run: python main.py
-
-      - name: Commit updated state.json
-        run: |
-          git config user.name "itty-bitty-bot"
-          git config user.email "itty-bitty-bot@users.noreply.github.com"
-          git add state.json
-          git diff --cached --quiet || git commit -m "Update state"
-          git push
