--- a/.github/workflows/content_board.yml
+++ b/.github/workflows/content_board.yml
@@ -25,16 +25,26 @@ jobs:
 
       - name: Run Itty Bitty Gaming News Digest
         env:
+          # Discord webhook (store this in repo secrets)
           DISCORD_WEBHOOK_URL: ${{ secrets.CONTENT_BOARD_WEBHOOK_URL }}
 
+          # Digest settings
           DIGEST_WINDOW_HOURS: "24"
           DIGEST_TOP_N: "5"
           DIGEST_MAX_PER_SOURCE: "1"
 
-          # Featured video: scrape newest episode from your Adilo hub
-          FEATURED_VIDEO_CHANNEL_URL: "https://adilo.bigcommand.com/c/ittybittygamingnews/home"
-          FEATURED_VIDEO_FALLBACK_URL: "https://adilo.bigcommand.com/c/ittybittygamingnews/home"
+          # Featured video title text (the link is discovered via Adilo API)
           FEATURED_VIDEO_TITLE: "Watch today’s Itty Bitty Gaming News"
+
+          # Adilo API (store these in repo secrets)
+          ADILO_PUBLIC_KEY: ${{ secrets.ADILO_PUBLIC_KEY }}
+          ADILO_SECRET_KEY: ${{ secrets.ADILO_SECRET_KEY }}
+
+          # Used to locate the right Adilo project automatically
+          ADILO_PROJECT_SEARCH: "Itty Bitty Gaming News"
+
+          # If the API fails for any reason, this is the safe fallback link
+          FEATURED_VIDEO_FALLBACK_URL: "https://adilo.bigcommand.com/c/ittybittygamingnews/home"
 
           USER_AGENT: "IttyBittyGamingNews/Digest"
         run: python digest.py
