--- a/.github/workflows/content_board.yml
+++ b/.github/workflows/content_board.yml
@@ -27,6 +27,8 @@ jobs:
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.CONTENT_BOARD_WEBHOOK_URL }}
 
+          FEATURED_VIDEO_FORCE_ID: K4AxdfCP
+
           FEATURED_VIDEO_TITLE: "Watch today’s Itty Bitty Gaming News"
           FEATURED_VIDEO_FALLBACK_URL: "https://adilo.bigcommand.com/c/ittybittygamingnews/home"
 
