--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -50,12 +50,10 @@ jobs:
 
           print(f"[GUARD] Local time in {tz}: {now.strftime('%Y-%m-%d %H:%M:%S %Z')}")
 
-          # Only allow first N minutes of the target hours
           if mm >= window:
               print("[GUARD] Outside minute window. Exiting without posting.")
               sys.exit(0)
 
-          # Target hours: 07, 13, 18 (7am, 1pm, 6pm)
           if hh not in ("07", "13", "18"):
               print("[GUARD] Not a target hour (07/13/18). Exiting without posting.")
               sys.exit(0)
@@ -71,7 +69,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install feedparser requests beautifulsoup4 python-dateutil
+          pip install feedparser requests beautifulsoup4 python-dateutil rapidfuzz
 
       - name: Run main bot
         run: |
